fixing minor bugs, changing mark done button to link

--- a/framework_task/C1/taskodio/lists/templates/lists/list_manage.html
+++ b/framework_task/C1/taskodio/lists/templates/lists/list_manage.html
@@ -18,6 +18,12 @@
 
     <div class="container">
         <div class="well">
+            {% if detail_error %}
+            <div class="alert">
+                {{ detail_error }}
+            </div>
+            {% endif %} 
+            
             {% if success %}
                 <div class="alert">
                     {{ success }}
