--- a/framework_task/C1/taskodio/lists/templates/lists/new_list.html
+++ b/framework_task/C1/taskodio/lists/templates/lists/new_list.html
@@ -29,7 +29,7 @@
 			<input type="text" placeholder="List name" name="list_name"><br>
 			<input type="submit" value="Create new list" class="btn btn-success">
 		</form>
-		<a href="/">Return to your lists</a>
+		<a href="/"><i class="icon-arrow-left"></i>Return to your lists</a>
     </div>
 </div>
 	
