--- a/framework_task/C1/taskodio/lists/templates/lists/share.html
+++ b/framework_task/C1/taskodio/lists/templates/lists/share.html
@@ -30,7 +30,7 @@
 			<input type="text" placeholder="enter username" name="shared_user">
 			<input type="submit" value="Share!" class="btn btn-success">
 		</form>
-		<a href="/">Return to your lists</a>
+		<a href="/"><i class="icon-arrow-left"></i>Return to your lists</a>
     	</div>
     </div>
 
