--- a/framework_task/C1/taskodio/lists/templates/lists/edit.html
+++ b/framework_task/C1/taskodio/lists/templates/lists/edit.html
@@ -30,7 +30,7 @@
 		<input type="text" placeholder="{{list.title}}" name="list_title"><br>
 		<input type="submit" value="Update" class="btn btn-success">
 	</form>
-		<a href="/">Return to your lists</a>
+		<a href="/"><i class="icon-arrow-left"></i>Return to your lists</a>
     	</div>
     </div>
 
