--- a/arability/app/views/layouts/application.html.erb
+++ b/arability/app/views/layouts/application.html.erb
@@ -8,6 +8,15 @@
 </head>
 <body>
 <div class="container">
+  <% flash.each do |key,msg| %>
+    <div class="alert alert-<%= key %>">
+      <div class="message-inner">
+        <%= content_tag :div, msg %>
+        <button type="button" class="close" data-dismiss="alert">&times;</button>
+      </div>
+    </div>
+  <% end %>
+
   <%= yield %>
 </div>
 
