finished landing page navbar and dropdown signin still without logic

--- a/arability/app/views/layouts/application.html.erb
+++ b/arability/app/views/layouts/application.html.erb
@@ -32,14 +32,14 @@ $(function() {
       <div class="nav-collapse">
 
         <ul class="nav pull-right">
-          <li><a href="#">Sign in</a></li>
+          <li><a href="#">Sign up</a></li>
           <li class="divider-vertical"></li>
           <li class="dropdown">
           <a class="dropdown-toggle" href="#" data-toggle="dropdown">Sign In <strong class="caret"></strong></a>
             <div class="dropdown-menu" style="padding: 15px; padding-bottom: 0px;">
               <form action="[YOUR ACTION]" method="post" accept-charset="UTF-8">
-                <input id="user_username" style="margin-bottom: 15px;" type="text" name="user[username]" size="30" />
-                <input id="user_password" style="margin-bottom: 15px;" type="password" name="user[password]" size="30" />
+                <input id="user_username" style="margin-bottom: 15px;" placeholder="Email" type="text" name="user[username]" size="30" />
+                <input id="user_password" style="margin-bottom: 15px;" placeholder="Password" type="password" name="user[password]" size="30" />
                 <input id="user_remember_me" style="float: left; margin-right: 10px;" type="checkbox" name="user[remember_me]" value="1" />
                 <label class="string optional" for="user_remember_me"> Remember me</label>
  
