--- a/arability/app/views/search/index.html.erb
+++ b/arability/app/views/search/index.html.erb
@@ -1,2 +1,9 @@
-<h1>Search#index</h1>
-<p>Find me in app/views/search/index.html.erb</p>
+<div class="row">
+	<legend>Search Keywords:</legend>
+	<form class="form-search" action="/search/index" method="post">
+		<div class="input-append">
+			<input class="span2 search-query" type="text" placeholder="Type search keyword here...">
+			<button type="submit" class="btn"><i class="icon-search"></i></button>
+		</div>
+	</form>
+</div>
