--- a/arability/app/views/admin/login.html.erb
+++ b/arability/app/views/admin/login.html.erb
@@ -1,9 +1,12 @@
 <form action="/admin/login" method="POST">
 	<fieldset>
 		<legend>Login</legend>
+		<% if flash[:error] %>
+			<div><%= flash[:error] %></div>
+		<% end %>
 		<label>
 			<strong>username:</strong>
-			<input type="text" name="username" placeholder="username" required>
+			<input type="text" name="username" placeholder="username" required value="<%= @username %>">
 		</label>
 		<label>
 			<strong>password:</strong>
