--- a/arability/app/views/devise/registrations/edit.html.erb
+++ b/arability/app/views/devise/registrations/edit.html.erb
@@ -1,25 +1,31 @@
 <h2>Edit <%= resource_name.to_s.humanize %></h2>
 
-<%= form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => { :method => :put }) do |f| %>
-  <%= devise_error_messages! %>
+<%= form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => { :method => :put, :class => "form-horizontal" }) do |f| %>
+  <div class="alert"><%= devise_error_messages! %></div>
 
-  <div><%= f.label :email %><br />
-  <%= f.email_field :email %></div>
+  <div class="control-group"><%= f.label :username, :class => "control-label" %>
+  <%= f.text_field :username, :placeholder => "UserName" %></div>
 
-  <div><%= f.label :password %> <i>(leave blank if you don't want to change it)</i><br />
-  <%= f.password_field :password %></div>
+  <div class="control-group"><%= f.label :email, :class => "control-label" %>
+  <%= f.email_field :email, :placeholder => "Example@example.com" %></div>
 
-  <div><%= f.label :password_confirmation %><br />
-  <%= f.password_field :password_confirmation %></div>
+  <div class="control-group"><%= f.label :password, :class => "control-label" %> 
+  <%= f.password_field :password, :placeholder => "Password" %><i>(leave blank if you don't want to change it)</i></div>
 
-  <div><%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
-  <%= f.password_field :current_password %></div>
+  <div class="control-group"><%= f.label :password_confirmation, :class => "control-label" %>
+  <%= f.password_field :password_confirmation, :placeholder => "Confirm Password" %></div>
 
-  <div><%= f.submit "Update" %></div>
+  <div class="control-group"><%= f.label :age, :class => "control-label" %>
+  <%= f.text_field :age, :placeholder => "Age" %></div>
+
+  <div class="control-group"><%= f.label :country, :class => "control-label" %>
+  <%= f.text_field :country, :placeholder => "Country" %></div>
+
+  <div class="control-group"><%= f.label :education_level, :class => "control-label" %>
+  <%= f.text_field :education_level, :placeholder => "Low - Medium - High" %></div> 
+
+  <div class="control-group"><%= f.label :current_password, :class => "control-label" %> 
+  <%= f.password_field :current_password, :placeholder => "Current Password" %><i>(we need your current password to confirm your changes)</i></div>
+
+  <div><%= f.submit "Update", :class => "btn btn-inverse" %></div>
 <% end %>
-
-<h3>Cancel my account</h3>
-
-<p>Unhappy? <%= link_to "Cancel my account", registration_path(resource_name), :confirm => "Are you sure?", :method => :delete %>.</p>
-
-<%= link_to "Back", :back %>
