--- a/arability/app/views/shared/_navbar.html.erb
+++ b/arability/app/views/shared/_navbar.html.erb
@@ -7,7 +7,7 @@
         <span class="icon-bar"></span>
       </a>
 
-      <a class="brand">arability</a>
+      <a class="brand" href="/">arability</a>
 
       <div class="nav-collapse">
       <% if !gamer_signed_in? %>
