--- a/arability/app/views/devise/registrations/new.html.erb
+++ b/arability/app/views/devise/registrations/new.html.erb
@@ -12,6 +12,20 @@
   <div><%= f.label :password_confirmation %><br />
   <%= f.password_field :password_confirmation %></div>
 
+  <div><%= f.label :username %><br />
+  <%= f.text_field :username %></div>
+
+  <div><%= f.label :age %><br />
+  <%= f.text_field :age %></div>
+
+  <div><%= f.label :country %><br />
+  <%= f.text_field :country %></div>
+
+  <div><%= f.label :education_level %><br />
+  <%= f.text_field :education_level %>  enter low, medium or high</div>
+
+
+
   <div><%= f.submit "Sign up" %></div>
 <% end %>
 
