--- a/arability/app/assets/stylesheets/bootstrap_and_overrides.css.scss
+++ b/arability/app/assets/stylesheets/bootstrap_and_overrides.css.scss
@@ -11,6 +11,10 @@ div.field_with_errors {
   display: inline;
 }
 
+.alert ul {
+  @extend ul;
+  margin: 0 0 0px 10px;
+}
 @import "bootstrap-responsive";
 
 
