--- a/arability/app/views/layouts/application.html.erb
+++ b/arability/app/views/layouts/application.html.erb
@@ -1,23 +1,72 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Arability</title>
   <%= stylesheet_link_tag    "application", :media => "all" %>
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
 </head>
 <body>
-<div class="container">
-  <% flash.each do |key,msg| %>
-    <div class="alert alert-<%= key %>">
-      <div class="message-inner">
-        <%= content_tag :div, msg %>
-        <button type="button" class="close" data-dismiss="alert">&times;</button>
+<script type="text/javascript" charset="utf-8">
+$(function() {
+  // Setup drop down menu
+  $('.dropdown-toggle').dropdown();
+ 
+  // Fix input element click problem
+  $('.dropdown input, .dropdown label').click(function(e) {
+    e.stopPropagation();
+  });
+});
+</script>
+<div class="navbar navbar-fixed-top">
+  <div class="navbar-inner">
+    <div class="container">
+      <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </a>
+
+      <a class="brand">arability</a>
+
+      <div class="nav-collapse">
+
+        <ul class="nav pull-right">
+          <li><a href="#">Sign up</a></li>
+          <li class="divider-vertical"></li>
+          <li class="dropdown">
+          <a class="dropdown-toggle" href="#" data-toggle="dropdown">Sign In <strong class="caret"></strong></a>
+            <div class="dropdown-menu" style="padding: 15px; padding-bottom: 0px;">
+              <form action="[YOUR ACTION]" method="post" accept-charset="UTF-8">
+                <input id="user_username" style="margin-bottom: 15px;" placeholder="Email" type="text" name="user[username]" size="30" />
+                <input id="user_password" style="margin-bottom: 15px;" placeholder="Password" type="password" name="user[password]" size="30" />
+                <input id="user_remember_me" style="float: left; margin-right: 10px;" type="checkbox" name="user[remember_me]" value="1" />
+                <label class="string optional" for="user_remember_me"> Remember me</label>
+ 
+                <input class="btn btn-primary" style="clear: left; width: 100%; height: 32px; font-size: 13px;" type="submit" name="commit" value="Sign In" />
+              </form>
+            </div>
+          </li>
+        </ul>
+
       </div>
     </div>
-  <% end %>
+  </div>
+</div>
 
-  <%= yield %>
+<div role="main" id="main">
+  <div class="container">
+    <div class="content">
+      <div class="row">
+        <div class="span12">
+          <%= render 'layouts/messages' %>
+          <%= yield %>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
 
 </body>
