[Issue #75] [WIP] Modified index view and controller

--- a/arability/app/views/projects/index.html.erb
+++ b/arability/app/views/projects/index.html.erb
@@ -1,9 +1,9 @@
 <% @projects.each do |project| %>
 <div class="boxed">
 	<%= project.name %>
-	<%= project.category %>
+	<%= project.categories %>
 	<%= project.description %>
-	
+	<a class="btn btn-mini" href="#"><i class="icon-trash"></i> </a>
 </div>
 <br />
 <% end %>
