--- a/arability/app/views/projects/index.html.erb
+++ b/arability/app/views/projects/index.html.erb
@@ -1,4 +1,4 @@
-<h1>Listing projects</h1>
+<h1>Projects</h1>
 
 <table>
   <tr>
@@ -18,7 +18,7 @@
 <% @projects.each do |project| %>
   <tr>
     <td><%= project.name %></td>
-    <td><%= project.category %></td>
+    <td><%= project.categories %></td>
     <td><%= project.formal %></td>
     <td><%= project.minAge %></td>
     <td><%= project.maxAge %></td>
