[Issue #75] [WIP] Modified view to show the categories and the controller

--- a/arability/app/views/projects/index.html.erb
+++ b/arability/app/views/projects/index.html.erb
@@ -2,8 +2,10 @@
 <div class="boxed">
 	<%= project.name %>
 	<%= project.categories %>
+	<% project.categories.each do |c| %>
+	<%= c.name %>
+	<% end %>
 	<%= project.description %>
 </div>
 <br />
 <% end %>
-
