#86 added the drop down menu for the educational level

--- a/arability/app/views/devise/registrations/new.html.erb
+++ b/arability/app/views/devise/registrations/new.html.erb
@@ -22,9 +22,8 @@
   <%= f.text_field :country %></div>
 
   <div><%= f.label :education_level %><br />
-  <%= f.text_field :education_level %>  enter low, medium or high</div>
-
-
+  <%= f.select(:education_level, 
+  options_for_select(['','low','medium','high'])) %></div>
 
   <div><%= f.submit "Sign up" %></div>
 <% end %>
