--- a/arability/app/views/admin/index.html.erb
+++ b/arability/app/views/admin/index.html.erb
@@ -1,3 +1,4 @@
 <%= link_to "logout", :action => "logout" %>
 <h1>Admin#index</h1>
-<p>Find me in app/views/admin/index.html.erb</p>
+
+<%= render 'admin/wordadd' %>
