Salma modified documentation and changed the create project redirection path

--- a/arability/app/views/projects/index.html.erb
+++ b/arability/app/views/projects/index.html.erb
@@ -1,6 +1,9 @@
 <h1>Projects</h1>
-
+<br />
+<a class="btn" href="/projects/new"><i class="icon-plus"></i> New Project</a>
+<br />
 <% @projects.each do |project| %>
+<br />
 <div class="boxed">
 	<%= project.name %>
 	<br />
