--- a/arability/app/views/projects/index.html.erb
+++ b/arability/app/views/projects/index.html.erb
@@ -1,13 +1,15 @@
 <% @projects.each do |project| %>
 <div class="boxed">
+	<h5>Name:</h5>
 	<%= project.name %>
 	<br />
+	<h5>Categories:</h5>
 	<% project.categories.each do |c| %>
 	<%= c.name %>
 	<% end %>
 	<br />
+	<h5>Description:</h5>	
 	<%= project.description %>
-
 </div>
 <br />
 <% end %>
