--- a/arability/app/views/search/search.html.erb
+++ b/arability/app/views/search/search.html.erb
@@ -1,6 +1,6 @@
 <div class="row">
 	<legend>Search Keywords:</legend>
-	<%= form_tag("/search/", :method => "post", :class => "form-search") do %>
+	<%= form_tag(search_path, :method => "post", :class => "form-search") do %>
   	<%= content_tag(:div, :class => 'input-append') do %>
   		<% text_field_tag(:search, @search_keyword,
   											:placeholder => 'search keywords here...', 
