--- a/arability/app/views/search/search.html.erb
+++ b/arability/app/views/search/search.html.erb
@@ -3,7 +3,7 @@
 	<%= form_tag(search_path, :method => "post", :class => "form-search") do %>
   	<%= content_tag(:div, :class => 'input-append') do %>
   		<% text_field_tag(:search, @search_keyword,
-  											:placeholder => 'search keywords here...', 
+  											:placeholder => 'search keywords here...',
   											:class => 'search-query') +%>
 			<% button_tag(:type => "submit",:class => 'btn') do %>
 				<% content_tag(:i, nil,:class => "icon-search")%>
@@ -21,8 +21,10 @@
 	<% if @similar_keywords.blank? && !@search_keyword.blank? && !@suggested %>
 	<div class="well">
 		<%= content_tag(:span, 
-		"Sorry! No matched were found for the keyword you searched for! Do you wish to add it to our database?")%>
-		<%= link_to "Add", :controller => "keywords", :action => "suggest_add", :search => @search_keyword, :method => :get %>
+		"Sorry! No matched were found for the keyword you searched for!" +
+		" Do you wish to add it to our database?")%>
+		<%= link_to "Add", :controller => "keywords", :action => "suggest_add",
+		:search => @search_keyword, :method => :get %>
 	</div>
 	<% else %>
 		<ul class="unstyled">
