--- a/arability/app/views/search/search.html.erb
+++ b/arability/app/views/search/search.html.erb
@@ -13,18 +13,18 @@
 </div>
 
 <div class="row">
-	<% if @suggested == 'true' %>
+	<% if @is_successful == 'true' %>
 	<div class="alert alert-success">
 		<%= content_tag(:span, "Keyword successfully added!") %>
 	</div>
-	<% elsif @suggested == 'false' && @suggested != nil %>
+	<% elsif @is_successful == 'false' && @is_successful != nil %>
 	<div class="alert alert-danger">
 		<%= content_tag(:span, 
 			"Sorry, we failed to add your word to database! Check it and try " +
 			"again") %>
 	</div>
 	<% end %>
-	<% if @similar_keywords.blank? && !@search_keyword.blank? && @suggested == nil%>
+	<% if @similar_keywords.blank? && !@search_keyword.blank? && @is_successful == nil%>
 	<div class="well">
 		<%= content_tag(:span, 
 			"Sorry! No matched were found for the keyword you searched for!" +
