--- a/arability/app/views/devise/registrations/edit.html.erb
+++ b/arability/app/views/devise/registrations/edit.html.erb
@@ -25,8 +25,8 @@
   <div class="control-group"><%= f.label :country, :class => "control-label" %>
   <%= f.text_field :country, :placeholder => "Country", :style => "margin-left: 10px;" %></div>
 
-  <div class="control-group"><%= f.label :education_level, :class => "control-label" %>
-  <%= f.text_field :education_level, :placeholder => "Low - Medium - High", :style => "margin-left: 10px;" %></div> 
+  <div><%= f.label :education_level, :class => "control-label" %>
+    <%= f.select(:education_level, options_for_select(['','low','medium','high']), {}, { :style => "margin-left: 10px;" }) %></br></div><br>
 
   <div class="control-group"><%= f.label :current_password, :class => "control-label" %> 
   <%= f.password_field :current_password, :placeholder => "Current Password", :style => "margin-left: 10px;" %><i>&nbsp;(we need your current password to confirm your changes)</i></div>
