--- a/arability/app/views/projects/_form.html.erb
+++ b/arability/app/views/projects/_form.html.erb
@@ -2,7 +2,8 @@
   <% if @project.errors.any? %>
     <div id="error_explanation">
       <h2>
-        <%= pluralize(@project.errors.count, "error") %> prohibited this project from being saved:
+        <%= pluralize(@project.errors.count, "error") %> 
+        prohibited this project from being saved:
       </h2>
       <ul>
       <% @project.errors.full_messages.each do |msg| %>
