fixed extra end

--- a/arability/app/views/admin/index.html.erb
+++ b/arability/app/views/admin/index.html.erb
@@ -1,4 +1,6 @@
 <%= link_to "logout", :action => "logout" %>
+<%= link_to "import csv", action: "import_csv" %>
+
 <h1>Admin#index</h1>
 
 <%= render 'admin/wordadd' %>
