--- a/arability/app/views/admin/import_csv.html.erb
+++ b/arability/app/views/admin/import_csv.html.erb
@@ -2,13 +2,15 @@
 
 <form action="/admin/upload" enctype="multipart/form-data" method="POST">
 	<input type="file" id="csvfile" name="csvfile">
-	<input type="hidden" name="authenticity_token">
+	<input type="hidden" value="<%= form_authenticity_token %>" name="authenticity_token">
 	<input type="submit" value="Upload">
 </form>
 
+<!--	
 <script>
 $('input[name=authenticity_token]').val($('meta[name=csrf-token]').attr('content'))
 </script>
+-->
 
 <p>To upload a CSV file:</br></p>
 <ol>
