combine the views of adding a word and importing csv file
removed post "admin/import_csv" from routes
modified index.html.erb to render admin/importCSV
included twitter bootstrap in admin.css.scss
included jquery and twitter bootstrap jsin admin.js.coffee
combined the functionality of import_csv with index

--- a/arability/app/views/admin/index.html.erb
+++ b/arability/app/views/admin/index.html.erb
@@ -1,6 +1,6 @@
-<%= link_to "logout", :action => "logout" %>
-<%= link_to "import csv", action: "import_csv" %>
+<%= link_to "logout", action: "logout" %>
 
 <h1>Admin#index</h1>
 
-<%= render 'admin/wordadd' %>
+<%= render 'admin/wordAdd' %>
+<%= render 'admin/importCSV' %>
