--- a/arability/app/views/layouts/admin.html.erb
+++ b/arability/app/views/layouts/admin.html.erb
@@ -1,10 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Arability</title>
-  <%= stylesheet_link_tag    "admin", :media => "all" %>
-  <%= javascript_include_tag "admin" %>
-  <%= csrf_meta_tags %>
+
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title><%= content_for?(:title) ? yield(:title) : "Arability" %></title>
+<meta name="author" content="Karim ElNaggar">
+<%= stylesheet_link_tag "admin", :media => "all" %>
+<%= csrf_meta_tags %>
+<%= yield(:head) %>
+
 </head>
 <body>
 
@@ -22,6 +27,8 @@
 </div>
 
 <%= yield %>
+
+<%= javascript_include_tag "admin" %>
 
 </body>
 </html>
