--- a/arability/app/views/devise/registrations/new.html.erb
+++ b/arability/app/views/devise/registrations/new.html.erb
@@ -24,7 +24,10 @@
         :end_year => Time.now.year - 95}, :style => "margin-left: 10px;" %></div></br>
 
     <div><%= f.label :country, :class => "control-label" %>
-    <%= f.text_field :country, :style => "margin-left: 10px;" %></div></br>
+        <span style="margin-left: 10px;">
+            <%= f.country_select :country, [ "Egypt", "Lebanon", "Jordan" ]%>
+        </span>
+    </div></br>
 
     <div><%= f.label :education_level, :class => "control-label" %>
     <%= f.select(:education_level, options_for_select(['','low','medium','high']), {}, { :style => "margin-left: 10px;" }) %></br></div>
