--- a/arability/app/views/devise/registrations/edit.html.erb
+++ b/arability/app/views/devise/registrations/edit.html.erb
@@ -1,6 +1,6 @@
 <em><h3 class="text-info">Edit <%= resource_name.to_s.humanize %></h3></em>
 
-<div class="container well">
+<div class="well">
 <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => { :method => :put, :class => "form-horizontal" }) do |f| %>
   <% if resource.errors.any? %>
   <div class="alert"><%= devise_error_messages! %></div>
@@ -19,11 +19,15 @@
   <div class="control-group"><%= f.label :password_confirmation, :class => "control-label" %>
   <%= f.password_field :password_confirmation, :placeholder => "Confirm Password", :style => "margin-left: 10px;" %></div>
 
-  <div class="control-group"><%= f.label :age, :class => "control-label" %>
-  <%= f.text_field :age, :placeholder => "Age", :style => "margin-left: 10px;" %></div>
+  <div><%= f.label :date_of_birth, :class => "control-label" %>
+    <%=  f.date_select :date_of_birth, {:start_year => Time.now.year, 
+        :end_year => Time.now.year - 95}, :style => "margin-left: 10px;" %></div><br>
 
-  <div class="control-group"><%= f.label :country, :class => "control-label" %>
-  <%= f.text_field :country, :placeholder => "Country", :style => "margin-left: 10px;" %></div>
+  <div><%= f.label :country, :class => "control-label" %>
+        <span style="margin-left: 10px;">
+            <%= f.country_select :country, [ "Egypt", "Lebanon", "Jordan" ]%>
+        </span>
+    </div><br>
 
   <div><%= f.label :education_level, :class => "control-label" %>
     <%= f.select(:education_level, options_for_select(['','low','medium','high']), {}, { :style => "margin-left: 10px;" }) %></br></div><br>
