noha commited changes

--- a/arability/app/views/projects/_form.html.erb
+++ b/arability/app/views/projects/_form.html.erb
@@ -1,12 +1,3 @@
-<<<<<<< HEAD
-<%= form_for(@project) do |f| %>
-  <% if @project.errors.any? %>
-    <div id="error_explanation">
-      <h2>
-        <%= pluralize(@project.errors.count, "error") %> 
-        prohibited this project from being saved:
-      </h2>
-=======
 <div class = "container">
   <style>
   .radio{
@@ -19,7 +10,7 @@
     <div id="error_explanation">
       <h2><%= pluralize(@project.errors.count, "error") %> prohibited this project from being saved:</h2>
 
->>>>>>> 463444f8b41e4ee4ba1b41e4b340e648e86a2c9f
+
       <ul>
       <% @project.errors.full_messages.each do |msg| %>
         <li><%= msg %></li>
@@ -27,12 +18,12 @@
       </ul>
     </div>
   <% end %>
-<<<<<<< HEAD
-  <div class="field">
+
+<!--   <div class="field">
     <%= f.label :name %><br />
     <%= f.text_field :name %>
   </div>
-=======
+ -->
 
   <div class="field">
     <%= f.label :name %>
@@ -60,12 +51,11 @@
     <%= f.label :description %>
     <%= f.text_area :description %>
   </div>
->>>>>>> 463444f8b41e4ee4ba1b41e4b340e648e86a2c9f
+f
   <div class="actions">
     <%= f.submit %>
   </div>
 <% end %>
-<<<<<<< HEAD
-=======
-</div>
->>>>>>> 463444f8b41e4ee4ba1b41e4b340e648e86a2c9f
+
+
+
