--- a/arability/app/views/projects/index.html.erb
+++ b/arability/app/views/projects/index.html.erb
@@ -1,20 +1,7 @@
 <h1>Projects</h1>
-<<<<<<< HEAD
-<table>
-  <tr>
-    <th>Name</th>
-  </tr>
-<% @projects.each do |project| %>
-  <tr>
-    <td><%= project.name %></td>
-    <td><%= link_to 'Destroy', project, method: :
-    delete, data: { confirm: 'Are you sure?' } %></td>
-  </tr>
-<% end %>
-</table>
-<br />
-<%= link_to 'New Project', new_project_path %>
-=======
+
+
+
 <br />
 <a class="btn" href="/projects/new"><i class="icon-plus"></i> New Project</a>
 <br />
@@ -33,7 +20,9 @@
   Description:
   <br />	
   <%= project.description %>
+  <%= link_to 'Destroy', project, method: 
+    delete, data: { confirm: 'Are you sure?' } %>
 </div>
 <br />
 <% end %>
->>>>>>> 463444f8b41e4ee4ba1b41e4b340e648e86a2c9f
+
