[issue #186] [WIP] modified routes, added function show, added show button in index view

--- a/arability/app/views/projects/import_csv.html.erb
+++ b/arability/app/views/projects/import_csv.html.erb
@@ -3,6 +3,7 @@
 <form action="/projects/upload" enctype="multipart/form-data" method="POST">
 	<input type="file" id="csvfile" name="csvfile">
 	<input type="hidden" value="<%= form_authenticity_token %>" name="authenticity_token">
+	<input type="hidden" value="<%= @project_id %>" name="project_id">
 	<input type="submit" value="Upload">
 </form>
 <p>To upload a CSV file:</br></p>
