[issue #186] [WIP] added route for choose_keywords and modified how it is redirected from controller

--- a/arability/app/views/projects/import_csv.html.erb
+++ b/arability/app/views/projects/import_csv.html.erb
@@ -14,7 +14,7 @@
 </ol>
 
 <% if @message == "1" %>
-<p style="color:red;">*You did not upload a file</p>
+<p style="color:red;">You did not upload a file</p>
 <% end %>
 
 <% if @message == "2" %>
