--- a/arability/app/views/projects/index.html.erb
+++ b/arability/app/views/projects/index.html.erb
@@ -18,7 +18,7 @@
   <br />	
   <%= project.description %>
   <br />
-  <%= link_to 'Show', project %>
+  <%= link_to 'Open', project %>
 </div>
 <br />
 <% end %>
