--- a/arability/app/views/social/twitter.html.erb
+++ b/arability/app/views/social/twitter.html.erb
@@ -1,21 +1,7 @@
-<div class="signInSocial-block">
-    <div class="headLine-motivator">
-        <span class="text-bold">Twitter</span>
-    </div>
-
-    <div class="signInSocial-ID">
-        <div class="socialIcon">
-            <a href="/twitter_session/unlink">
-                <img alt="Twitter" class="border-none" src="/images/buttons/twitter.png?1364470200" title="">
-            </a>
-        </div>
-
-        <div class="socialIcon-details">
-            <span class="text-12">Connected with Twitter - <a href="http://twitter.com/account/redirect_by_id?id=1033328257" class="link-blue" target="_blank">twitter.com/account/redirect_by_id?id=1033328257</a>
-                <br>
-            <a href="/twitter_session/unlink" class="link-grey">
-                <span class="text-bold">Remove connection</span>
-            </a></span>
-        </div>
-    </div>
+<h2>STEP 3: Connect your Arability account to your Twitter account</h2>
+<br>
+<div>
+    <button class="btn btn-info" action="/auth/twitter">Connect to Twitter</button>
 </div>
+
+<button class="btn btn-link">Next</button>
