[Issue #186] [WIP] trying to add a route for the form which will contain checkboxes, fixing upload method errors

--- a/arability/app/views/projects/choose_keywords.html.erb
+++ b/arability/app/views/projects/choose_keywords.html.erb
@@ -1,22 +1,3 @@
-<div class="test">vdgdjkashghasukfaufgakufgqurghwehiorertet <br>
-vdgdjkashghasukfaufgakufgqurghwehiorertet <br>
-vdgdjkashghasukfaufgakufgqurghwehiorertet <br>
-vdgdjkashghasukfaufgakufgqurghwehiorertet <br>
-vdgdjkashghasukfaufgakufgqurghwehiorertet <br>
-vdgdjkashghasukfaufgakufgqurghwehiorertet <br>
-vdgdjkashghasukfaufgakufgqurghwehiorertet <br>
-vdgdjkashghasukfaufgakufgqurghwehiorertet <br>
-vdgdjkashghasukfaufgakufgqurghwehiorertet <br>
-vdgdjkashghasukfaufgakufgqurghwehiorertet <br>
-vdgdjkashghasukfaufgakufgqurghwehiorertet <br>
-vdgdjkashghasukfaufgakufgqurghwehiorertet <br>
-vdgdjkashghasukfaufgakufgqurghwehiorertet <br>
-vdgdjkashghasukfaufgakufgqurghwehiorertet <br>vdgdjkashghasukfaufgakufgqurghwehiorertet <br>vdgdjkashghasukfaufgakufgqurghwehiorertet <br>vdgdjkashghasukfaufgakufgqurghwehiorertet <br>vdgdjkashghasukfaufgakufgqurghwehiorertet <br>vdgdjkashghasukfaufgakufgqurghwehiorertet <br>vdgdjkashghasukfaufgakufgqurghwehiorertet <br>vdgdjkashghasukfaufgakufgqurghwehiorertet <br>vdgdjkashghasukfaufgakufgqurghwehiorertet <br>vdgdjkashghasukfaufgakufgqurghwehiorertet <br>vdgdjkashghasukfaufgakufgqurghwehiorertet <br>vdgdjkashghasukfaufgakufgqurghwehiorertet <br>vdgdjkashghasukfaufgakufgqurghwehiorertet <br>vdgdjkashghasukfaufgakufgqurghwehiorertet <br>vdgdjkashghasukfaufgakufgqurghwehiorertet <br>vdgdjkashghasukfaufgakufgqurghwehiorertet <br>vdgdjkashghasukfaufgakufgqurghwehiorertet <br>vdgdjkashghasukfaufgakufgqurghwehiorertet <br>vdgdjkashghasukfaufgakufgqurghwehiorertet <br>vdgdjkashghasukfaufgakufgqurghwehiorertet <br>vdgdjkashghasukfaufgakufgqurghwehiorertet <br>vdgdjkashghasukfaufgakufgqurghwehiorertet <br>vdgdjkashghasukfaufgakufgqurghwehiorertet <br>vdgdjkashghasukfaufgakufgqurghwehiorertet <br>vdgdjkashghasukfaufgakufgqurghwehiorertet <br>vdgdjkashghasukfaufgakufgqurghwehiorertet <br>vdgdjkashghasukfaufgakufgqurghwehiorertet <br>vdgdjkashghasukfaufgakufgqurghwehiorertet <br>vdgdjkashghasukfaufgakufgqurghwehiorertet <br>vdgdjkashghasukfaufgakufgqurghwehiorertet <br>vdgdjkashghasukfaufgakufgqurghwehiorertet <br>vdgdjkashghasukfaufgakufgqurghwehiorertet <br>vdgdjkashghasukfaufgakufgqurghwehiorertet <br>vdgdjkashghasukfaufgakufgqurghwehiorertet <br>vdgdjkashghasukfaufgakufgqurghwehiorertet <br>vdgdjkashghasukfaufgakufgqurghwehiorertet <br>vdgdjkashghasukfaufgakufgqurghwehiorertet <br>vdgdjkashghasukfaufgakufgqurghwehiorertet <br>vdgdjkashghasukfaufgakufgqurghwehiorertet <br>vdgdjkashghasukfaufgakufgqurghwehiorertet <br>vdgdjkashghasukfaufgakufgqurghwehiorertet <br>vdgdjkashghasukfaufgakufgqurghwehiorertet <br>vdgdjkashghasukfaufgakufgqurghwehiorertet <br>vdgdjkashghasukfaufgakufgqurghwehiorertet <br>vdgdjkashghasukfaufgakufgqurghwehiorertet <br>vdgdjkashghasukfaufgakufgqurghwehiorertet <br>vdgdjkashghasukfaufgakufgqurghwehiorertet <br>vdgdjkashghasukfaufgakufgqurghwehiorertet <br>vdgdjkashghasukfaufgakufgqurghwehiorertet <br>vdgdjkashghasukfaufgakufgqurghwehiorertet <br>vdgdjkashghasukfaufgakufgqurghwehiorertet <br>vdgdjkashghasukfaufgakufgqurghwehiorertet <br>vdgdjkashghasukfaufgakufgqurghwehiorertet <br>vdgdjkashghasukfaufgakufgqurghwehiorertet <br>vdgdjkashghasukfaufgakufgqurghwehiorertet <br>vdgdjkashghasukfaufgakufgqurghwehiorertet <br>vdgdjkashghasukfaufgakufgqurghwehiorertet <br>vdgdjkashghasukfaufgakufgqurghwehiorertet <br>vdgdjkashghasukfaufgakufgqurghwehiorertet <br>vdgdjkashghasukfaufgakufgqurghwehiorertet <br>vdgdjkashghasukfaufgakufgqurghwehiorertet <br>vdgdjkashghasukfaufgakufgqurghwehiorertet <br></div>
-<style type="text/css">
-div.test {
-	border: 2px;
-	height :250px;
-	width :350px;
-	overflow: scroll;
-}
-</style>
+<% for word in @words_in_database_before %>
+    <%= Keyword.name %>
+  <% end %>
