--- a/arability/app/assets/stylesheets/admin.css.scss
+++ b/arability/app/assets/stylesheets/admin.css.scss
@@ -1,3 +1,7 @@
 // Place all the styles related to the admin controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.offset25top {
+	margin-top: 5%;
+}
