--- a/arability/app/views/layouts/admin.html.erb
+++ b/arability/app/views/layouts/admin.html.erb
@@ -7,6 +7,7 @@
 	<%= stylesheet_link_tag "bootstrap.rtl", :media => "all" %>
 	<%= stylesheet_link_tag "bootstrap-responsive.rtl", :media => "all" %>
 	<%= stylesheet_link_tag "bootstrap-fileupload.min.rtl", :media => "all" %>
+	<%= stylesheet_link_tag "admin", :media => "all" %>
 	<!-- <link rel="stylesheet" href="bootstrap.rtl.css"> -->
 	<!-- <link rel="stylesheet" href="bootstrap-responsive.rtl.css"> -->
 	<!-- <link rel="stylesheet" href="bootstrap-fileupload.min.css"> -->
@@ -24,13 +25,14 @@
 </head>
 <body>
 	<%= render 'admin/navbar' %>
-	
+
 	<%= yield %>
 
 	<%= javascript_include_tag "jquery.min" %>
 	<%= javascript_include_tag "bootstrap.rtl" %>
 	<%= javascript_include_tag "jquery.validate" %>
 	<%= javascript_include_tag "bootstrap-fileupload.min" %>
+	<%= javascript_include_tag "admin" %>
 	<!-- <script src="jquery.min.js"></script> -->
 	<!-- <script src="bootstrap.rtl.js"></script> -->
 	<!-- <script src="jquery.validate.js"></script> -->
