issue [#13] [WIP] modified admin add word view to the new admin layout

--- a/arability/app/views/admin/_navbar.html.erb
+++ b/arability/app/views/admin/_navbar.html.erb
@@ -2,6 +2,11 @@
 	<div class="navbar-inner">
 		<div class="container">
 			<a class="brand" href="#">لوحة تحكم Arability</a>
+			<ul class="nav pull-right">
+				<li>
+					<%= link_to "تسجيل الخروج", :action => "logout" %>
+				</li>
+			</ul>
 		</div>
 	</div>
 </div>
