--- a/arability/app/views/layouts/admin.html.erb
+++ b/arability/app/views/layouts/admin.html.erb
@@ -6,7 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<%= stylesheet_link_tag "bootstrap.rtl", :media => "all" %>
 	<%= stylesheet_link_tag "bootstrap-responsive.rtl", :media => "all" %>
-	<%= stylesheet_link_tag "bootstrap-fileupload.min.rtl", :media => "all" %>
+	<%= stylesheet_link_tag "bootstrap-fileupload.min", :media => "all" %>
 	<%= stylesheet_link_tag "admin", :media => "all" %>
 	<!-- <link rel="stylesheet" href="bootstrap.rtl.css"> -->
 	<!-- <link rel="stylesheet" href="bootstrap-responsive.rtl.css"> -->
