--- a/arability/app/views/projects/index.html.erb
+++ b/arability/app/views/projects/index.html.erb
@@ -1,9 +1,16 @@
 <h1>Projects</h1>
 <br />
-<a class="btn" href="/projects/new"><i class="icon-plus"></i> New Project</a>
+<div class="tabbable tabs-left">
+  <ul class="nav nav-tabs">
+    <li class="active"><a href="#tab1" data-toggle="tab">My projects</a></li>
+    <li><a href="#tab2" data-toggle="tab">Shared projects with me</a></li>
+  </ul>
+  <div class="tab-content">
+    <div class="tab-pane active" id="tab1">
+      <p><a class="btn" href="/projects/new"><i class="icon-plus"></i> New Project</a>
 <br />
 <br />
-<% @projects.each do |project| %>
+<% @my_projects.each do |project| %>
   <div class="well well-small">
   <strong>Name:</strong>
   <br />
@@ -23,8 +30,40 @@
   <% end %>
   <br />
   <strong>Description:</strong>
-  <br />	
+  <br />  
+  <%= project.description %>
+</div>
+<br />
+<% end %></p>
+    </div>
+    <div class="tab-pane" id="tab2">
+      <p>
+        <% @shared_projects.each do |project| %>
+  <div class="well well-small">
+  <strong>Name:</strong>
+  <br />
+  <%= project.name %>
+  <br />
+  <strong>Categories:</strong>
+  <br />
+  <% size = project.categories.length %>
+  <% counter = 1 %>
+  <% project.categories.each do |c| %>
+    <% if counter < size %>
+      <%= c.name %>,
+      <% counter = counter + 1 %>
+    <% else %>
+      <%= c.name %>
+    <% end %>
+  <% end %>
+  <br />
+  <strong>Description:</strong>
+  <br />  
   <%= project.description %>
 </div>
 <br />
 <% end %>
+      </p>
+    </div>
+  </div>
+</div>
