--- a/arability/app/views/projects/choose_keywords.html.erb
+++ b/arability/app/views/projects/choose_keywords.html.erb
@@ -1,3 +1,17 @@
-<% for word in @words_in_database_before %>
-  <%= Keyword.name %>
+<%= form_tag add_from_csv_keywords_project_path, :method => :put, :id => 'form_to_select_words' do %>
+  <% for word in @words_in_database_before %>
+    <%= check_box_tag "words_ids[]", word.id %>
+    <%= word.name %>
+    <br />
+  <% end %>
+  <% for word in @words_not_in_database_before %>
+    <%= check_box_tag "words_ids[]", word.id %>
+    <%= word.name %><style="color:red;">*new*</>
+    <br />
+  <% end %>
+  <br />
+  <%= submit_tag "Import to project" %>
 <% end %>
+<script type="text/javascript">
+checkboxlimit(form_to_select_words, 2)
+</script>
